@@ -5,6 +5,7 @@ Supported Presently
 Changelog for 1.3.38
 * Fixed AR/AP transactions resetting currency/exchange rate (Chris T)
 * Reports all default to detail instead of summary (Erik H)
+* Fixed adding vouchers not checking for locked/approved batches (Chris T 1025)
 
 Changelog for 1.3.37
 * 1.3-1.2 downgrade now drops extensions (Chris T, 943)
